<resources>
  <string name="app_name">Termomaps</string>
  <string name="name">Name</string>
  <string name="marker_name">Marker name</string>
  <string name="temperature_lose">Temperature lose</string>
  <string name="navigation_drawer_open">open\n</string>
  <string name="navigation_drawer_close">close</string>
  <string name="cancel">Cancel</string>
  <string name="confirm">Confirm</string>
  <string name="menu">Menu</string>
  <string name="create_map">Create map</string>
  <string name="my_maps">My maps</string>
  <string name="map_name">Name</string>
  <string name="map_description">Description</string>
  <string name="create">Create</string>
  <string name="save">Save</string>
  <string name="delete">Delete</string>
  <string name="delete_marker">Are you sure You want to delete the marker?</string>
  <string name="delete_map">Are you sure you want to delete the map?</string>
</resources>