<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  >

  <com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/tbCreateMap"
    android:layout_width="0dp"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:navigationIcon="@drawable/ic_arrow_back"
    app:navigationIconTint="@color/white"
    app:title="@string/create_map"
    />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilMapName"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="24dp"
    android:hint="@string/map_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tbCreateMap"
    >

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/tietMapName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilMapDescription"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="24dp"
    android:hint="@string/map_description"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tilMapName"
    >

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/tietMapDescription"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/btnCreateMap"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:text="@string/create"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tilMapDescription"
    app:layout_constraintVertical_bias="1"
    />

</androidx.constraintlayout.widget.ConstraintLayout>